final changes to container sizing and footer positioning

--- a/randomColor.html
+++ b/randomColor.html
@@ -24,7 +24,7 @@
   </div>
 
   <footer>
-    <a href="#">PHILBERT
+    <a href="#">PIZZA IS LIFE
   </footer>
 
   <script type="text/javascript" src="randomColor.js"></script>
